--- a/ArcGIS开发/ArcGIS/Web.config
+++ b/ArcGIS开发/ArcGIS/Web.config
@@ -7,9 +7,15 @@
 
 <configuration>
 
-    <system.web>
-      <compilation debug="true" targetFramework="4.5" />
-      <httpRuntime targetFramework="4.5" />
-    </system.web>
+  <system.web>
+    <compilation debug="true" targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" />
+  </system.web>
+
+  <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".geojson" mimeType="application/geojson"/>
+    </staticContent>
+  </system.webServer>
 
 </configuration>
