--- a/OpenLayer开发/OpenLayersStudy-master/Web.config
+++ b/OpenLayer开发/OpenLayersStudy-master/Web.config
@@ -15,6 +15,7 @@
   <system.webServer>
     <staticContent>
       <mimeMap fileExtension=".geojson" mimeType="application/geojson"/>
+      <mimeMap fileExtension=".json" mimeType="application/json"/>
     </staticContent>
   </system.webServer>
 
